modifique el html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body onload="arraymulti()">
     <input type="text" id="nombre">
     <button onclick="compara()">comparar</button>
+    <input type="text">
+    <button></button>
     <div>Hola soy un ejercicio de clase </div>
     <script src="jquery/jquery-3.6.1.min.js"></script>
     <script src="ejercicio.js"></script>
